# mapping_manager

./: README.md
camera_model/: CMakeLists.txt  package.xml
camera_model/include/camera_models/: Camera.h  CameraFactory.h  PinholeCamera.h
camera_model/src/camera_models/: Camera.cc  CameraFactory.cc  PinholeCamera.cc
config/: config.yaml  rviz.rviz
manager_node/: CMakeLists.txt  package.xml
manager_node/include/: MyOcTree.h  keyframe.hpp  manager.hpp  project2d.hpp
manager_node/launch/: global_manager.launch  mapping_manager.launch
manager_node/src/: MyOcTree.cpp  keyframe.cpp  manager.cpp  manager_global_node.cpp  manager_local_node.cpp  manager_node.cpp  project2d.cpp
